# AIGate

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: error.rs  failover.rs  lib.rs  pricing.rs  provider.rs  types.rs
core/src/providers/: claude.rs  gemini.rs  mod.rs  openai.rs
server/: Cargo.toml
server/src/: main.rs
test-ui/: README.md  index.html
