[package]
name = "aigate-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AIGate core: provider-agnostic AI gateway types and adapters."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
futures = "0.3"
eventsource-stream = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
