[package]
name = "aigate-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AIGate HTTP daemon: an OpenAI-compatible gateway to any AI engine."

[dependencies]
aigate-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
